Updated OpenAPI contract to include idempotency key as a required header parameter. Added idempotencyKey as required in header in  enpoint . Modified unit tests to validate new behavior.
